--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Sunset Rocks 🎸</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color:rgb(248, 250, 252);"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
